--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,36 @@
+@font-face {
+  font-family: "SimplonNorm";
+  src: url("../../public/fonts/SimplonNorm-Regular.otf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "SimplonNorm";
+  src: url("../../public/fonts/SimplonNorm-Bold.otf");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   box-sizing: border-box;
+  margin: 0;
+  font-family: "SimplonNorm", sans-serif;
+}
+
+hr {
+  border: 1px solid #e5e5e5;
+}
+
+a {
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
   margin: 0;
 }
 
