--- a/src/components/header/DropDown.module.css
+++ b/src/components/header/DropDown.module.css
@@ -1,12 +1,14 @@
 .dropdownContainer {
   position: relative;
   display: inline-block;
-  font-family: Arial, sans-serif;
+  font-size: 14px;
+
   user-select: none;
 }
 
 .dropdownHeader {
   font-weight: bold;
+
   cursor: pointer;
   padding: 8px 12px;
   text-transform: uppercase;
@@ -24,7 +26,7 @@
 .dropdownList {
   position: absolute;
   top: 110%;
-  left: 0;
+  right: 0;
   background: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
@@ -56,4 +58,10 @@
 
 .checkmarkDisabled {
   opacity: 0%;
+}
+
+@media (min-width: 768px) {
+  .dropdownContainer {
+    font-size: 18px;
+  }
 }
