--- a/src/components/header/DropDown.module.css
+++ b/src/components/header/DropDown.module.css
@@ -30,18 +30,19 @@
   background: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  min-width: 200px;
+
   z-index: 10;
-  padding: 8px 0;
+  padding: 22px 16px;
 }
 
 .dropdownItem {
   padding: 10px 16px;
   cursor: pointer;
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
   gap: 8px;
   font-weight: 500;
+  text-wrap: nowrap;
 }
 
 .dropdownItem:hover {
@@ -50,6 +51,8 @@
 
 .selected {
   font-weight: bold;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .checkmark {
