--- a/src/components/shopLayout/filtering/filterPanel/CheckBox.module.css
+++ b/src/components/shopLayout/filtering/filterPanel/CheckBox.module.css
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 1rem;
+  align-content: center;
+  gap: 0.5rem;
   font-weight: bold;
 }
